objects/CMPL123__MDC_Public_Group_User_Acknowledgement__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Acknowledged_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores Acknowledged User Id</description>
        <label>Acknowledged User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDC_Public_Group_User_Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Acknowledgment_Date__c</fullName>
        <description>Stores User Acknowledged Date Time</description>
        <label>Acknowledgment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Comments__c</fullName>
        <description>Stores user acknowledgement comments</description>
        <inlineHelpText>Stores user acknowledgement comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__MDC_Acknowledgement_Entry__c</fullName>
        <label>MDC Acknowledgement Entry</label>
        <referenceTo>CMPL123__MDC_Acknowledgement_Entry__c</referenceTo>
        <relationshipLabel>MDC Public Group User Acknowledgements</relationshipLabel>
        <relationshipName>MDC_Public_Group_User_Acknowledgements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MDC Public Group User Acknowledgement</label>
    <nameField>
        <displayFormat>MAPGM-{000000}</displayFormat>
        <label>MDC Public Group User Acknowledgement Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDC Public Group User Acknowledgements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>